; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_parse.c_tl_parse_long.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_parse.c_tl_parse_long.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@tl = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tl_parse_long() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tl, i32 0, i32 0), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i64 -1, i64* %1, align 8
  br label %7

5:                                                ; preds = %0
  %6 = call i64 @do_rpc_fetch_long(i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tl, i32 0, i32 0))
  store i64 %6, i64* %1, align 8
  br label %7

7:                                                ; preds = %5, %4
  %8 = load i64, i64* %1, align 8
  ret i64 %8
}

declare dso_local i64 @do_rpc_fetch_long(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
